[Fix bug] add word-wrap: break-word in the sass file of comment message

--- a/src/stylesheets/components/_comment.scss
+++ b/src/stylesheets/components/_comment.scss
@@ -26,6 +26,7 @@
             width: 120px;
             margin: 5px;
             font-size: 14px;
+            word-wrap: break-word;
             &::-webkit-scrollbar {
                 width: 8px;
             }
